@@ -7,10 +7,14 @@ readPicture <- function(file, warn = TRUE) {
     pictureDims <- getPictureDims(svgImage)
     # Need to create picture definitions table first
     picdefs <- parsePictureDefinitions(svgImage)
+    # Stick defs in .grImport2Env so can be modded on-the-fly during parseImage
+    assign("defs", picdefs, envir=.grImport2Env)
     # Now parse the contents of the image (<defs> are ignored).
     # <use>s are resolved to "real" elements
     pic <- parseImage(xmlChildren(svgImage, addNames = FALSE),
                       picdefs, createDefs = FALSE)
+    # Update defs for changes during parseImage
+    picdefs <- get("defs", picdefs, envir=.grImport2Env)
     new("Picture",
         content = pic,
         defs = picdefs,
